--- a/404.css
+++ b/404.css
@@ -56,6 +56,7 @@ span a:hover {
 @media screen and (max-width: 500px) {
     img {
         width: 70%;
+        height: 40%;
     }
     .container {
         padding: 70px 10px 10px 10px;
