--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root{
-	--main-background: #0b0c0f;
+	--main-background: #000;
 	--main-fonts-color: #fff;
 	--main-decor-color:#00a9e2;
-    --main-header-background:#21252e;
+    --main-header-background:#000;
 	--main-font-family: 'Poppins', sans-serif;
 }
 
@@ -13,10 +13,10 @@
 	padding: 0;@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root{
-	--main-background: #0b0c0f;
+	--main-background: #000;
 	--main-fonts-color: #fff;
 	--main-decor-color:#00a9e2;
-    --main-header-background:#21252e;
+    --main-header-background:#000;
 	--main-font-family: 'Poppins', sans-serif;
 }
 
