--- a/style.css
+++ b/style.css
@@ -174,6 +174,22 @@ a.nav-link{
 	text-shadow: 0 0 50px var(--main-decor-color);
 }
 
+#x {
+	padding: 10px;
+	display: flex;
+	position: center;
+    align-items: space-around;
+	justify-content:center;
+}
+
+#x a {
+    margin: 10px;
+    font-size: 220%;
+    text-align:center;
+    display: inline-block;
+	color: var(--main-fonts-color);
+}
+
 /*──────────────────
       projects
 ──────────────────*/
