--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ a.nav-link{
 
 #x a {
     margin: 10px;
-    font-size: 320%;
+    font-size: 2.3rem;
     text-align:center;
     display: inline-block;
 	color: var(--main-fonts-color);
